--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.7.17",
+        "@heroicons/react": "^2.0.18",
+        "@reduxjs/toolkit": "^1.9.7",
         "@vueuse/core": "^10.5.0",
+        "firebase": "^10.5.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
-        "react-router-dom": "^6.17.0"
+        "react-redux": "^8.1.3",
+        "react-router-dom": "^6.17.0",
+        "react-tabs": "^6.0.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
