--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "react-icons": "^4.11.0",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.17.0",
-        "react-tabs": "^6.0.2"
+        "react-tabs": "^6.0.2",
+        "react-toastify": "^9.1.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
